Schedule: Fixed Map spacing

--- a/FinalWeek/css/extras.css
+++ b/FinalWeek/css/extras.css
@@ -35,6 +35,7 @@
 .map{
   width: 100%;
   height: 250px;
+  margin-bottom: .5rem;
 }
 
 
@@ -123,11 +124,11 @@ input[type=checkbox] {
 @media (max-width: 1024px){
 
   .button-nav {
-      
+
   }
 
   .afterdropdown {
-      
+
   }
 
   .dropbtn .button-nav{
@@ -144,7 +145,7 @@ input[type=checkbox] {
 
 
   #navbar{
-   
+
   }
 
 }
